# genY

./: .env.sample  .gitignore  EXECUTION_AUDIT_V2.md  EXECUTION_FINAL_REPORT.md  MIGRATION_PROGRESS.md  MIGRATION_REPORT.md  README.md  broadcast_logic.md  docker-compose.dev-core.yml  docker-compose.dev.yml  docker-compose.prod-core.yml  docker-compose.prod.yml  docker-compose.yml  index.md  logs.html
backend/: .env.example  CHAT_AND_MESSENGER_REVIEW.md  Dockerfile  README.md  README_KO.md  main.py  pyproject.toml  requirements.txt
backend/controller/: agent_controller.py  chat_controller.py  claude_controller.py  command_controller.py  curated_knowledge_controller.py  docs_controller.py  memory_controller.py  session_memory_controller.py  tool_controller.py  tool_preset_controller.py  tts_controller.py  user_opsidian_controller.py  vtuber_controller.py  workflow_controller.py
backend/data/playground2d/: world-layout.default.json  world-layout.json
backend/docs/: MCP.md  MCP_KO.md  TOOL_SEARCH.md
backend/mcp/: README.md
backend/mcp/built_in/: github.json
backend/prompts/: README.md  vtuber.md
backend/routers/: playground2d.py
backend/service/: mcp_loader.py
backend/service/auth/: .auth_secret  auth_service.py
backend/service/chat/: conversation_store.py
backend/service/claude_manager/: models.py  process_manager.py  session_manager.py  session_store.py
backend/service/config/: __init__.py  base.py  manager.py
backend/service/database/: __init__.py  app_database_manager.py  chat_db_helper.py  config_serializer.py  database_config.py  database_manager.py  db_config_helper.py  memory_db_helper.py  session_db_helper.py  session_log_db_helper.py
backend/service/environment/: __init__.py  exceptions.py  service.py
backend/service/execution/: agent_executor.py
backend/service/langgraph/: agent_session.py  agent_session_manager.py  autonomous_graph.py  claude_cli_model.py  context_guard.py  model_fallback.py  resilience_nodes.py  session_freshness.py  state.py  tool_bridge.py
backend/service/logging/: session_logger.py
backend/service/memory/: __init__.py  curated_knowledge.py  curation_engine.py  curation_scheduler.py  frontmatter.py  global_memory.py  index.py  long_term.py  manager.py  migrator.py  reflect_utils.py  short_term.py  structured_writer.py  types.py  user_opsidian.py
backend/service/memory_provider/: __init__.py  config.py  exceptions.py  flags.py  registry.py  schemas.py
backend/service/prompt/: __init__.py  builder.py  context_loader.py  protocols.py  sections.py  template_loader.py
backend/service/tool_policy/: policy.py  (+2 more)
backend/tool_presets/: preset-tool-search-coding.json  preset-tool-search-full.json  preset-tool-search-research.json  template-vtuber-tools.json
backend/tools/: _mcp_server.py  tool_search_tools.py
backend/workflows/: .gitignore  4f007ab9-4a57-4ec3-a138-e8bd4408280b.json  9ecbbf4a-c678-46f7-aee3-955c7688350e.json
backend/ws/: avatar_stream.py  chat_stream.py  execute_stream.py
(+297 files in other folders)
