[project]
name = "geny"
version = "1.0.0"
description = "Geny (Geny Execute, Not You) - Autonomous Multi-Agent System for Claude Code"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.0",
    "redis>=7.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.5",
    "aiohttp>=3.13.3",
    "pathspec>=0.12.0",
    # LangGraph + LangChain integration
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
